# routes/api.php
@@ -9,19 +9,20 @@ use App\Http\Controllers\Api\AddressController;
 // Public API routes
 Route::post('/register', [AuthController::class, 'register']);
 Route::post('/login', [AuthController::class, 'login']);
+Route::post('/forget-password', [AuthController::class, 'forgetPassword']);
+Route::post('/check-otp', [AuthController::class, 'checkOTP']);
 
-// Protected API routes (require a valid Sanctum token)
 Route::middleware('auth:sanctum')->group(function () {
-    
     // Auth
     Route::post('/logout', [AuthController::class, 'logout']);
-
-    // Profile
+    
+    // User Profile
     Route::get('/profile', [UserController::class, 'profile']); // get all user data.
     Route::put('/profile', [UserController::class, 'update']);
     Route::put('/profile/password', [UserController::class, 'updatePassword']);
     Route::delete('/profile', [UserController::class, 'delete']);
-
+    Route::put('reset-password', [UserController::class, 'resetPassword']);
+    
     // Address
     Route::get('/addresses', [AddressController::class, 'addresses']); // get addresses for specific user.
     Route::post('/address', [AddressController::class, 'create']);
